# recipe_service/docs/swagger.yaml
@@ -64,7 +64,7 @@ definitions:
 info:
   contact: {}
 paths:
-  /recipes:
+  /recipe:
     post:
       consumes:
       - application/json
@@ -94,7 +94,7 @@ paths:
       summary: Get Recipes by Ingredients
       tags:
       - recipes
-  /recipes/{id}:
+  /recipe/{id}:
     get:
       description: Returns a recipe with the specified ID
       parameters:
@@ -121,7 +121,7 @@ paths:
       summary: Get Recipe By ID
       tags:
       - recipes
-  /recipes/random:
+  /recipe/random:
     get:
       description: Returns a list of random recipes
       produces:
